--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
 
     <header class="bg-slate-800 text-white p-4 shadow-md z-10">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-xl sm:text-2xl font-semibold">Automotive Inventory AI Assistant</h1>
+            <h1 class="text-xl sm:text-2xl font-semibold">GLOW. Smart Conversations. Smooth Workflows</h1>
             </div>
     </header>
 
@@ -63,7 +63,7 @@
 
             <div class="mt-auto text-xs text-slate-400 text-center">
                 <p>Powered by Claude 3.5 RAG</p>
-                <p>&copy; 2025 Ghargash</p>
+                <p>&copy; 2025 Gargash</p>
             </div>
         </aside>
 
