--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,23 +19,20 @@
     <div class="flex flex-1 overflow-hidden container mx-auto w-full max-w-screen-2xl">
         <aside class="w-full md:w-1/3 lg:w-1/4 bg-slate-700 p-4 sm:p-6 text-white hidden md:flex flex-col space-y-6 overflow-y-auto">
             <div>
-                <h2 class="text-lg sm:text-xl font-semibold mb-3 text-slate-100">Document Management</h2>
-                <button id="uploadBtn" class="w-full bg-sky-500 hover:bg-sky-600 text-white font-medium py-2.5 px-4 rounded-lg transition duration-150 ease-in-out flex items-center justify-center text-sm sm:text-base">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 mr-2">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 16.5V9.75m0 0l-3 3m3-3l3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.338 0 4.5 4.5 0 01-1.41 8.775H6.75z" />
-                    </svg>
-                    Upload Documents
+
+
+
+
                 </button>
                 <input type="file" id="fileInput" multiple class="hidden" accept=".pdf,.csv,.xls,.xlsx">
-                <div id="uploadedFiles" class="mt-4 space-y-1 text-xs sm:text-sm"> <p class="text-slate-400 italic">No documents uploaded yet.</p>
-                    </div>
+                <div id="uploadedFiles" class="mt-4 space-y-1 text-xs sm:text-sm"></div>
             </div>
             
             <div class="border-t border-slate-600 pt-6">
                 <h2 class="text-lg sm:text-xl font-semibold mb-3 text-slate-100">Connected Data Sources</h2>
                 <ul class="space-y-2 text-xs sm:text-sm">
                     <li class="flex items-center text-green-400">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5 mr-2 shrink-0">
+
                             <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
                         </svg>
                         Inventory Database (Live)
